test/cli/test-cel-exceptions/check-deployment-labels/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: CELPolicyException
metadata:
  name: exclude-namespace
spec:
  policyRefs:
  - name: "check-deployment-labels"
    kind: ValidatingPolicy
  matchConditions:
    - name: "check-namespace"
      expression: "object.metadata.namespace == 'test-ns'"
