test/cli/test-cel-exceptions/check-deployment-labels/skipped-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipped-deployment
  namespace: test-ns
  labels:
    app: nginx
    env: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
